# aoe2saveanalysis

./: logging.yaml  pyproject.toml
aoe2savegame/: explore.ipynb  main.py
